tests/baselines/reference/overloadOnConstInheritance2.errors.txt
==== tests/cases/compiler/overloadOnConstInheritance2.ts (2 errors) ====
    interface Base {
        addEventListener(x: string): any;
        addEventListener(x: 'foo'): string;
    }
    interface Deriver extends Base {
              ~~~~~~~
!!! error TS2429: Interface 'Deriver' incorrectly extends interface 'Base':
!!! error TS2429:   Types of property 'addEventListener' are incompatible:
!!! error TS2429:     Type '(x: 'bar') => string' is not assignable to type '{ (x: string): any; (x: 'foo'): string; }'.
        addEventListener(x: 'bar'): string; // shouldn't need to redeclare the string overload
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2382: Specialized overload signature is not assignable to any non-specialized signature.
    }
    